--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="me.kiuber.test">
 
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.READ_SMS"/>
+
+    <uses-permission-sdk-23 android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
@@ -18,6 +27,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activity.PreferenceActivity"/>
+        <activity android:name=".ui.activity.PermissionActivity"/>
+        <activity android:name=".ui.activity."/>
+        <activity android:name=".ui.activity.DialogActivity"/>
+        <activity android:name=".ui.activity.ToastActivity"/>
     </application>
 
 </manifest>
