--- a/baseproject/src/main/AndroidManifest.xml
+++ b/baseproject/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:label="@string/app_name"
         android:supportsRtl="true">
 
